tests/fixtures/errors/e0503_reg_never_assigned.mimz
// expect: E0503
module M {
  clock clk
  reset rst
  out y: bit
  reg v: bit = 0
  y = v
}
